--- a/contact.html
+++ b/contact.html
@@ -8,21 +8,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="holder">
     <h3>Contact Me</h3>
     <hr>
     <form action="mailto:abishekparajuli64@gmail.com" method="POST" enctype="text/plain" target="_blank">
         <label for="">Name:</label>
         <input type="text" name="Name: ">
         <br>
+        <br>
         <label for="">Email:</label>
         <input type="email" name="Email: ">
+        <br>
         <br>
         <label for="">Feedback:</label><br>
         <textarea name="" id="" cols="30" rows="10"></textarea><br>
         <input type="submit">
-        
-
-
     </form>
+<a href="index.html"><strong>Back</strong></a>
+</div>
 </body>
 </html>
