--- a/index.html
+++ b/index.html
@@ -6,21 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
-<img src="https://scontent.fbdp1-1.fna.fbcdn.net/v/t1.0-9/84219818_1
+<div class="holder">
+    <img src="https://scontent.fbdp1-1.fna.fbcdn.net/v/t1.0-9/84219818_1
 437089713145662_207134311202160640_o.jpg?_nc_cat=102&ccb=1-3&_nc_sid=09cbfe&_n
 c_ohc=bshwnhWKRKQAX8lt_Hr&_nc_ht=scontent.fbdp1-1.fna&oh=6c1219dbee341cf20e292fee30
-e299b2&oe=60792995" alt="abishek parajuli" style="width: 200px;height: 200px";>
-<h1>Abishek Parajuli</h1>  
-<p><strong>Phone </strong>+977 9806093141</p>
-<p><strong>Email </strong>abishekparajuli64@gmail.com</p>
-<p><strong>Website </strong>abishekparajuli.com.np</p>
-<p><strong>Facebook </strong><a href="https://www.facebook.com/abishek.parajuli.14/" target="_blank">abishek.parajuli.14</a></p>
+e299b2&oe=60792995" alt="abishek parajuli" style="width: 200px;height: 200px" class="image">
+<h1 class="name">Abishek Parajuli</h1>  
+<p><strong>Phone: </strong>+977 9806093141</p>
+<p><strong>Email: </strong>abishekparajuli64@gmail.com</p>
+<p><strong>Website: </strong>abishekparajuli.com.np</p>
+<p><strong>Facebook: </strong><a href="https://www.facebook.com/abishek.parajuli.14/" target="_blank">abishek.parajuli.14</a></p>
 <br>
 <h3>Professional Summary</h3>
 <hr>
-<p>Learning....</p>
+<p>....</p>
 <br>
 <h3>Work Experience</h3>
 <hr>
@@ -28,7 +31,7 @@ e299b2&oe=60792995" alt="abishek parajuli" style="width: 200px;height: 200px";>
 <br>
 <h3>Education</h3>
 <hr>
-<p>Started Bachelor in Science in Computer Science and Information Technology (BSc.CSIT) <br>
+<p class="edu">Started Bachelor in Science in Computer Science and Information Technology (BSc.CSIT) <br>
 from September of 2018</p>
 <br>
 <h3>Additional Skill</h3>
@@ -37,7 +40,7 @@ from September of 2018</p>
     <li>Intermediate at Python.</li>
     <li>Well skilled at Photoshop</li>
     <li>Remarkable at Google search</li>
-    <li>Learning webdev</li>
+    <li>Learning web development</li>
 </ul>
 <h3>Skills</h3>
 <hr>
@@ -50,13 +53,12 @@ from September of 2018</p>
             <td>⭐⭐⭐⭐</td>
         </tr>
         <tr>
-            <td>Photography</td>
-            <td>⭐⭐</td>
             <td>webdev</td>
             <td>⭐</td>
         </tr>
     </tbody>
 </table>
 <a href="contact.html"><h3>Contact</h3></a>
+</div>
 </body>
 </html>
