--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abishek Parajuli</title>
+    <title>Resume</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="holder">
-    <img src="https://scontent.fbdp1-1.fna.fbcdn.net/v/t1.0-9/84219818_1
-437089713145662_207134311202160640_o.jpg?_nc_cat=102&ccb=1-3&_nc_sid=09cbfe&_n
-c_ohc=bshwnhWKRKQAX8lt_Hr&_nc_ht=scontent.fbdp1-1.fna&oh=6c1219dbee341cf20e292fee30
-e299b2&oe=60792995" alt="abishek parajuli" style="width: 200px;height: 200px" class="image">
+    <img src="ap.jpg" alt="abishek parajuli" class="image">
 <h1 class="name">Abishek Parajuli</h1>  
 <p><strong>Phone: </strong>+977 9806093141</p>
 <p><strong>Email: </strong>abishekparajuli64@gmail.com</p>
